--- a/Packager/Templates/index.html
+++ b/Packager/Templates/index.html
@@ -14,7 +14,7 @@
          <!-- Begin Header -->
          <div id="header">
 		 
-		       This is the Header		 
+		       VOD PACKAGER		 
 			   
 		 </div>
 		 <!-- End Header -->
