--- a/Packager/Templates/static_app/main.css
+++ b/Packager/Templates/static_app/main.css
@@ -12,7 +12,7 @@
 * { padding: 0; margin: 0; }
 
 body {
- font-family: Arial, Helvetica, sans-serif;
+ font-family: Helvetica, sans-serif;
  font-size: 13px;
 }
 #wrapper { 
@@ -21,14 +21,15 @@ body {
 
 }
 #header {
- color: #333;
+ font-size: 30px;
+ color: #000000;
  width: 900px;
  float: left;
  padding: 10px;
  border: 1px solid #ccc;
- height: 100px;
+ height: 50px;
  margin: 10px 0px 5px 0px;
- background: #BD9C8C;
+ background: #F4AC38;
 }
 #leftcolumn { 
  color: #333;
