--- a/Packager/Templates/static_app/main.css
+++ b/Packager/Templates/static_app/main.css
@@ -34,7 +34,7 @@ body {
 #leftcolumn { 
  color: #333;
  border: 1px solid #ccc;
- background: #E7DBD5;
+ background: #F2B551;
  margin: 0px 5px 5px 0px;
  padding: 10px;
  height: 350px;
@@ -45,7 +45,7 @@ body {
  float: right;
  color: #333;
  border: 1px solid #ccc;
- background: #F2F2E6;
+ background: #F2CB8B;
  margin: 0px 0px 5px 0px;
  padding: 10px;
  height: 350px;
@@ -57,7 +57,7 @@ body {
  clear: both;
  color: #333;
  border: 1px solid #ccc;
- background: #BD9C8C;
+ background: #F2B551;
  margin: 0px 0px 10px 0px;
  padding: 10px;
 }
