--- a/Packager/Templates/index.html
+++ b/Packager/Templates/index.html
@@ -2,8 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Fixed Width CSS Layouts - 2 Column - fw-12-2-col</title>
-<link rel="stylesheet" type="text/css" href="/static_app/main.css" />
+<title>VOD Packager</title>
+<link rel="stylesheet" type="text/css" href="css/main.css" />
+<link rel="stylesheet" href="css/css3-gmail-style.css" type="text/css" />
 </head>
 
 <body>
@@ -14,23 +15,51 @@
          <!-- Begin Header -->
          <div id="header">
 		 
-		       VOD PACKAGER		 
+		       VOD-Packager
 			   
 		 </div>
 		 <!-- End Header -->
 		 
 		 <!-- Begin Left Column -->
 		 <div id="leftcolumn">
-		 
-		       Left Column
-		 
+		 	
+		 	<center>
+		       <a href="#" class="bttn" style="width: 150px;">Items<a><br />
+		       <a href="#" class="bttn" style="width: 150px;">Customers<a><br />
+		       <a href="#" class="bttn" style="width: 150px;">Packages<a><br />
+		       <a href="#" class="bttn" style="width: 150px;">Daemons<a><br />
+		       <br /><br />
+		       <a href="#" class="bttn blue" style="width: 150px;">Admin<a><br />
+		       <a href="#" class="bttn red" style="width: 150px;">Logout<a><br />
+		       <a href="#" class="bttn icon search">Search<a>
+		       </center>
+		 		
 		 </div>
 		 <!-- End Left Column -->
 		 
 		 <!-- Begin Right Column -->
 		 <div id="rightcolumn">
-		       
-	          <a href="#">Download this CSS Layout</a>		 
+		      			<table class="tableViewTitle">
+				<tr>
+				<td class="tdViewTitle"><h2>Items</h2></td>
+				<td>Search</td><td><input type="search" name="searchText"></td>
+				</tr>
+			</table>
+		      
+		      <center> 
+	          <table class="tableView">
+	          	<tr><th class="thLeft">Name</th><th class="thCenter">MAM id</th><th class="thCenter">Creation Date</th><th class="thCenter">Kill Date</th></tr>
+	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
+	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
+	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
+	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
+	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
+	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
+	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
+	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
+	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
+	          </table>
+	          </center>
 		 
 		 </div>
 		 <!-- End Right Column -->
