--- a/Packager/Templates/item.html
+++ b/Packager/Templates/item.html
@@ -5,16 +5,7 @@
 <title>VOD Packager</title>
 <link rel="stylesheet" type="text/css" href="/css/main.css" />
 <link rel="stylesheet" href="/css/css3-gmail-style.css" type="text/css" />
-<!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> -->
-<!-- Style for the demo page -->
-<!-- <link rel="stylesheet" type="text/css" href="css/demo.css" /> -->
-<!-- Style of the component -->
-<link rel="stylesheet" type="text/css" href="/css/style.css" />
-<noscript>
-	<link rel="stylesheet" type="text/css" href="/css/styleNoJS.css" />
-</noscript>
-<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow&v1' rel='stylesheet' type='text/css' />
-<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&v2' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
@@ -49,67 +40,52 @@
 		 <!-- Begin Right Column -->
 		 <div id="rightcolumn">
 		      
-		    
-		    <div id="va-accordion" class="va-container">
-				<div class="va-nav">
-					<span class="va-nav-prev">Previous</span>
-					<span class="va-nav-next">Next</span>
-				</div>
-				<div class="va-wrapper">
-					<div class="va-slice va-slice-1">
-						<h3 class="va-title">Item Title</h3>
-						<div class="va-content">
-							<table>
-								<tr><td>Name</td><td></td></tr>
-								<tr><td>Kill date</td><td></td></tr>
-								<tr><td>Status</td><td></td></tr>
-								<tr><td>Asset id</td><td></td></tr>
-								<tr><td>Metadata language</td><td></td></tr>
-								<tr><td>Episode number</td><td></td></tr>
-								<tr><td>Rating</td><td></td></tr>
-								<tr><td>Genre</td><td></td></tr>
-								<tr><td>Actors</td><td></td></tr>
-								<tr><td>Origin country</td><td></td></tr>
-								<tr><td>Year</td><td></td></tr>
-								<tr><td>Director</td><td></td></tr>
-								<tr><td>Studio name</td><td></td></tr>
-								<tr><td>Format</td><td></td></tr>
-								<tr><td>MAM id</td><td></td></tr>
-							</table>
-							<a href="#" class="bttn icon fork" onclick="javascript:alert(1)">Export<a>
-							<a href="#" class="bttn icon delete" onclick="javascript:alert(1)">Delete<a>
-						</div>
-					</div>
-					<div class="va-slice va-slice-2">
-						<h3 class="va-title">Video Rendition</h3>
-						<div class="va-content">
-							
-						</div>	
-					</div>
-					<div class="va-slice va-slice-3">
-						<h3 class="va-title">Image Rendition</h3>
-						<div class="va-content">
-							
-						</div>	
-					</div>
-				</div>
-			</div>
-			<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-			<script type="text/javascript" src="/js/jquery.easing.1.3.js"></script>
-			<script type="text/javascript" src="/js/jquery.mousewheel.js"></script>
-			<script type="text/javascript" src="/js/jquery.vaccordion.js"></script>
-			<script type="text/javascript">
-				$(function() {
-					$('#va-accordion').vaccordion({
-						accordionW      : 670,
-    					accordionH      : 485,
-						expandedHeight	: 485,
-						animSpeed		: 500,
-						animEasing		: 'easeInOutBack',
-						animOpacity		: 0.4
-					});
-				});
-			</script>
+		      <h3>Item Name</h3>
+		      
+		      <table border="1" width="100%">
+		      	<tr>
+		      		<td>
+		      			<table>
+							<tr><td width="150px">Name</td><td>La mas trolita</td></tr>
+							<tr><td>Kill date</td><td>12/12/2012</td></tr>
+							<tr><td>Status</td><td>New</td></tr>
+							<tr><td>Asset id</td><td>125637162318263</td></tr>
+							<tr><td>Metadata language</td><td>Spanish</td></tr>
+							<tr><td>Episode number</td><td>12</td></tr>
+							<tr><td>Rating</td><td>4.5</td></tr>
+							<tr><td>Genre</td><td>Hardcore</td></tr>
+							<tr><td>Actors</td><td>Robert de Niro</td></tr>
+							<tr><td>Origin country</td><td>USA</td></tr>
+							<tr><td>Year</td><td>2012</td></tr>
+							<tr><td>Director</td><td>Tim Burton</td></tr>
+							<tr><td>Studio name</td><td>Disney</td></tr>
+							<tr><td>Format</td><td>SD</td></tr>
+							<tr><td>MAM id</td><td>81723981723981</td></tr>
+						</table>
+		      		</td>
+		      		<td valign="top">
+		      			<table border="1" width="100%">
+		      				<tr><td>Export to:</td></tr>
+		      				<tr>
+		      					<td>
+									<select multiple="multiple">										<option value="volvo">Volvohjsadgfhjsgd</option>
+										<option value="saab">Saabsdfsdfsdfsdf</option>
+										<option value="opel">Opesdfsdfsdfl</option>
+										<option value="audi">Audisdfsdfsdfs</option>
+									</select>
+		      					</td>
+		      				</tr>
+		      				<tr><td>Package group:</td></tr>
+		      			</table>
+		      		</td>
+		      	</tr>
+		      	<tr>
+		      		<td colspan="2">Video Rendition</td>
+		      	</tr>
+		      	<tr>
+		      		<td colspan="2">Image Rendition</td>
+		      	</tr>
+		      </table>
 		 
 		 </div>
 		 <!-- End Right Column -->
