--- a/Packager/Templates/index.html
+++ b/Packager/Templates/index.html
@@ -39,8 +39,8 @@ jQuery(document).ready(function() {
 		       <a href="#" class="bttn" style="width: 150px;">Packages<a><br />
 		       <a href="#" class="bttn" style="width: 150px;">Daemons<a><br />
 		       <br /><br />
-		       <a href="#" class="bttn blue" style="width: 150px;">Admin<a><br />
-		       <a href="#" class="bttn red" style="width: 150px;">Logout<a><br />
+		       <a href="#" class="bttn" style="width: 150px;">Admin<a><br />
+		       <a href="#" class="bttn" style="width: 150px;">Logout<a><br />
 		       </center>
 		 		
 		 </div>
