--- a/Packager/Templates/index.html
+++ b/Packager/Templates/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>VOD Packager</title>
-<link rel="stylesheet" type="text/css" href="/css/main.css" />
-<link rel="stylesheet" href="/css/css3-gmail-style.css" type="text/css" />
+<link rel="stylesheet" type="text/css" href="css/main.css" />
+<link rel="stylesheet" href="css/css3-gmail-style.css" type="text/css" />
 <script type="text/javascript">
 jQuery(document).ready(function() {
   jQuery(".content").hide();
@@ -39,8 +39,8 @@ jQuery(document).ready(function() {
 		       <a href="#" class="bttn" style="width: 150px;">Packages<a><br />
 		       <a href="#" class="bttn" style="width: 150px;">Daemons<a><br />
 		       <br /><br />
-		       <a href="#" class="bttn" style="width: 150px;">Admin<a><br />
-		       <a href="#" class="bttn" style="width: 150px;">Logout<a><br />
+		       <a href="#" class="bttn blue" style="width: 150px;">Admin<a><br />
+		       <a href="#" class="bttn red" style="width: 150px;">Logout<a><br />
 		       </center>
 		 		
 		 </div>
