--- a/Packager/Templates/item.html
+++ b/Packager/Templates/item.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>VOD Packager</title>
-<link rel="stylesheet" type="text/css" href="/css/main.css" />
-<link rel="stylesheet" href="/css/css3-gmail-style.css" type="text/css" />
+<link rel="stylesheet" type="text/css" href="css/main.css" />
+<link rel="stylesheet" href="css/css3-gmail-style.css" type="text/css" />
 
 </head>
 
