--- a/Packager/Templates/view.html
+++ b/Packager/Templates/view.html
@@ -1,10 +1,11 @@
-{% extends "base.html" %}
+{% extends "base_views.html" %}
 
 {% block content %}
 <table id="hor-zebra">
 	<thead>
 		<tr>
 			<th scope="col" width="20px"><!-- <input type="checkbox" name="your-group" value="unit-in-group" /> --></th>
+			<th scope="col" class="center" width="20px"></th>
 			<th scope="col">Name</th>
 			<th scope="col">MAM id</th>
 			<th scope="col" class="center">Creation date</th>
@@ -14,8 +15,9 @@
 	<tbody>
 
 {% for item in items %}
-		<tr class="odd">
-			<td><input type="checkbox" name="xxx" value="xxx"/></td>
+		<tr class="{% if forloop.counter|divisibleby:2 %}even{% else %}odd{% endif %}">
+			<td><input type="checkbox" name="entrycheck" value="{{item.id}}"/></td>
+			<td class="display_icon"><span id="status" class="status_{{item.status}}" /></td>
 			<td>{{ item.name }}</td>
 			<td>{{ item.mam_id }}</td>
 			<td class="center">{{ item.creation_date }}</td>
@@ -24,5 +26,4 @@
 {% endfor %}
 	</tbody>
 </table>
-<input type="checkbox" name="xxx" value="xxx"/>
 {% endblock %}
