--- a/Packager/Templates/base.html
+++ b/Packager/Templates/base.html
@@ -20,12 +20,11 @@
 	</script>
 </head>
 <body>
-	<h1>
-		<a href="#">VOD Claxsonxx</a>
-	</h1>
 	<div class="container_12">
 		<div class="grid_12" style="background: #6B6E80">
-			<p>Header</p>
+			<h1>
+				<a href="#">VOD Claxsonxx</a>
+			</h1>
 		</div>
 		<div class="clear"></div>
 		<div class="grid_3" id="navbar">
@@ -34,9 +33,8 @@
 			<a href="#" class="bttn" style="width: 150px;">Customers</a><br />
 			<a href="#" class="bttn" style="width: 150px;">Packages</a><br />
 			<br /><br />
-			<a href="#" class="bttn blue" style="width: 150px;">Admin</a><br />
-			<a href="#" class="bttn red" style="width: 150px;">Logout</a><br />
-			<br />
+			<a href="/admin" class="bttn" style="width: 150px;">Admin</a><br />
+			<a href="#" class="bttn" style="width: 150px;">Logout</a>
 		</div>
 		{% block content %}{% endblock %}
 		<div class="clear"></div>
