--- a/Packager/Templates/base.html
+++ b/Packager/Templates/base.html
@@ -9,8 +9,8 @@
 	<link rel="stylesheet" href="/css/main.css" />
 	<link rel="stylesheet" href="/css/css3-gmail-style.css" />
 	<link rel="stylesheet" href="/css/tables.css" />
-	<link href='http://fonts.googleapis.com/css?family=Inder|BenchNine|Anaheim|Strait|Cinzel' rel='stylesheet' type='text/css'>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<link href='http://fonts.googleapis.com/css?family=Anaheim|Carrois+Gothic|Gafata' rel='stylesheet' type='text/css'>
+	<script type="text/javascript" src="/js/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="/js/jquery.cookie.js"></script>
 	<script type="text/javascript" src="/js/jquery.accordion.js"></script>
 	<script type="text/javascript">
@@ -30,7 +30,7 @@
 		<div class="grid_3" id="navbar">
 			<br />
 			<a href="/vod" class="bttn" style="width: 150px;">Items</a><br />
-			<a href="#" class="bttn" style="width: 150px;">Customers</a><br />
+			<a href="/vod/customers" class="bttn" style="width: 150px;">Customers</a><br />
 			<a href="#" class="bttn" style="width: 150px;">Packages</a><br />
 			<br /><br />
 			<a href="/admin" class="bttn" style="width: 150px;">Admin</a><br />
