--- a/Packager/Templates/css/main.css
+++ b/Packager/Templates/css/main.css
@@ -3,37 +3,31 @@ body {
   color: #333;
   /* font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; */
   font-family: 'Anaheim', sans-serif;
-  font-size: 17px;
+  font-size: 16px;
   height: auto;
   padding-bottom: 20px;
 }
-
 a {
   color: #fff;
   text-decoration: none;
 }
-
 a:hover {
   text-decoration: underline;
 }
-
 h1 {
   font-weight: normal;
   padding-top: 20px;
   text-align: center;
 }
-
 h2 {
   padding-top: 20px;
   text-align: center;
 }
-
 p {
   overflow: hidden;
   padding: 10px 0;
   text-align: center;
 }
-
 .container_12,
 .container_16,
 .container_24 {
@@ -41,11 +35,9 @@ p {
   background-repeat: repeat-y;
   margin-bottom: 20px;
 }
-
 .container_12 {
   /* background-image: url(../img/12_col.gif); */
 }
-
 .container_16 {
   background-image: url(../img/16_col.gif);
 }
@@ -110,6 +102,10 @@ input[type=search] {
  text-align: center;
  vertical-align: middle;
 }
+.display_check {
+ text-align: center;
+ vertical-align: middle;
+}
 div#navbar {  
  height: 500px;
  text-align: center;
@@ -122,7 +118,7 @@ div#image_rendition {
 }
 span.status_N {
  display: block;
- background-image: url(/images/icons/new.png);
+ background-image: url(/images/icons/tick.png);
  background-repeat:no-repeat;
  width: 16px;
  height: 16px;
@@ -141,7 +137,7 @@ span.status_D {
  width: 16px;
  height: 16px;
 }
-span.status_D {
+span.status_W {
  display: block;
  background-image: url(/images/icons/exclamation.png);
  background-repeat:no-repeat;
