--- a/Packager/Templates/base.html
+++ b/Packager/Templates/base.html
@@ -17,9 +17,10 @@
 </head>
 <body>
 	<div class="container_12">
-		<div class="grid_12" style="background: #6B6E80">
-			<h1>
-				<a href="#">Playboy TV Latin America VOD Packager</a>
+		<div class="grid_12">
+			<h1 class="headerTitle">
+				<img src="/images/PBTV.png" width="55" height="55">
+				<a href="#" style="padding-left: 10px;">PlayboyTV LA: VOD Packager</a>
 			</h1>
 		</div>
 		<div class="clear"></div>
