--- a/Packager/Templates/base.html
+++ b/Packager/Templates/base.html
@@ -13,7 +13,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Anaheim|Carrois+Gothic|Gafata' rel='stylesheet' type='text/css'>
 	{% block resources %}{% endblock %}
 	<!-- DAJAXICE.CORE.JS -->
-	<script src="/js/xx8.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/xxx9.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 	<div class="container_12">
@@ -36,8 +36,12 @@
 		</div>
 		{% block content %}{% endblock %}
 		<div class="clear"></div>
-		<div class="grid_12" style="background: #6B6E80;">
-			<p>Footer</p>
+		<div class="grid_12">
+			<table>
+				<tr>
+					<td style="padding-left: 88px;"><img src="/images/claxson_logo.png"></td><td></td>
+				</tr>
+			</table>
 		</div>
 		<div class="clear"></div>
 	</div>
