--- a/Packager/Templates/base_views.html
+++ b/Packager/Templates/base_views.html
@@ -31,7 +31,7 @@
 			<a href="/vod/dashboard" class="bttn" style="width: 150px;">Dashboard</a><br />
 			<br /><br />
 			<a href="/admin" target="_new" class="bttn" style="width: 150px;">Admin</a><br />
-			<a href="#" class="bttn" style="width: 150px;">Logout</a>
+			<a href="/logout" class="bttn" style="width: 150px;">Logout</a>
 		</div>
 		<div class="grid_9">
 			<table class="tblViewTitle">
