--- a/Packager/Templates/css/login.css
+++ b/Packager/Templates/css/login.css
@@ -1,6 +1,6 @@
 body {
   background: #282A30;
-  color: #333;
+  color: #fff;
   /* font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; */
   font-family: 'Anaheim', sans-serif;
   font-size: 17px;
