--- a/Packager/Templates/index.html
+++ b/Packager/Templates/index.html
@@ -2,94 +2,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>VOD Packager</title>
-<link rel="stylesheet" type="text/css" href="css/main.css" />
-<link rel="stylesheet" href="css/css3-gmail-style.css" type="text/css" />
-<script type="text/javascript">
-jQuery(document).ready(function() {
-  jQuery(".content").hide();
-  //toggle the componenet with class msg_body
-  jQuery(".heading").click(function()
-  {
-    jQuery(this).next(".content").slideToggle(500);
-  });
-});
-</script>
+<title>PlayboyTV LA: VOD Packager</title>
+<!-- <link href='http://fonts.googleapis.com/css?family=Anaheim|Carrois+Gothic|Gafata' rel='stylesheet' type='text/css' /> -->
+<link rel="stylesheet" type="text/css" href="/css/main.css" />
 </head>
 
-<body>
-
-   <!-- Begin Wrapper -->
-   <div id="wrapper">
-   
-         <!-- Begin Header -->
-         <div id="header">
-		 
-		       <h1>VOD-Packager</h1>
-			   
-		 </div>
-		 <!-- End Header -->
-		 
-		 <!-- Begin Left Column -->
-		 <div id="leftcolumn">
-		 	
-		 	<center>
-		       <a href="#" class="bttn" style="width: 150px;">Items<a><br />
-		       <a href="#" class="bttn" style="width: 150px;">Customers<a><br />
-		       <a href="#" class="bttn" style="width: 150px;">Packages<a><br />
-		       <a href="#" class="bttn" style="width: 150px;">Daemons<a><br />
-		       <br /><br />
-		       <a href="#" class="bttn blue" style="width: 150px;">Admin<a><br />
-		       <a href="#" class="bttn red" style="width: 150px;">Logout<a><br />
-		       </center>
-		 		
-		 </div>
-		 <!-- End Left Column -->
-		 
-		 <!-- Begin Right Column -->
-		 <div id="rightcolumn">
-		      
-			<table class="tableViewTitle">
-				<tr>
-				<td class="tdViewTitle"><h2>Items</h2></td>
-				<td>
-				<input type="search" name="searchText" style="width: 150px;">
-				</tr>
-			</table>
-		      <a href="#" class="bttn icon search">Search<a>
-		      
-		      <center> 
-	          <table class="tableView">
-	          	<tr class="trViewTitle"><th class="thLeft">Name</th><th class="thCenter">MAM id</th><th class="thCenter">Creation Date</th><th class="thCenter">Kill Date</th></tr>
-	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
-	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
-	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
-	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
-	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
-	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
-	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
-	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
-	          	<tr><td class="tdLeft">La mas trolita</td><td class="tdCenter">6102332</td><td class="tdCenter">01/12/2012</td><td class="tdCenter">13/12/2012</td></tr>
-	          </table>
-	          </center>
-	          <div class="grouped">
-				<a href="#" class="bttn prev">Previous<a>
-				<a href="#" class="bttn next">Next<a>
-				</div>
-		 
-		 </div>
-		 <!-- End Right Column -->
-		 
-		 <!-- Begin Footer -->
-		 <div id="footer">
-		       
-			   This is the Footer		
-			    
-	     </div>
-		 <!-- End Footer -->
-		 
-   </div>
-   <!-- End Wrapper -->
-   
+<body style="font-family: 'Anaheim', sans-serif;">
+	<center>
+		<table>
+			<tr><td class="center" style="padding-top:27px;">
+				<img src="/images/PBTV.png"><br />
+			</td></tr>
+			<tr><td class="center">
+				<h1>
+					<a href="#">PlayboyTV LA: VOD Packager</a>
+				</h1>
+			</td></tr>
+		</table>
+	</center>
 </body>
 </html>
