--- a/Packager/Templates/index.html
+++ b/Packager/Templates/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>PlayboyTV LA: VOD Packager</title>
-<!-- <link href='http://fonts.googleapis.com/css?family=Anaheim|Carrois+Gothic|Gafata' rel='stylesheet' type='text/css' /> -->
+<link href='http://fonts.googleapis.com/css?family=Anaheim|Carrois+Gothic|Gafata' rel='stylesheet' type='text/css' />
 <link rel="stylesheet" type="text/css" href="/css/main.css" />
 </head>
 
@@ -11,11 +11,11 @@
 	<center>
 		<table>
 			<tr><td class="center" style="padding-top:27px;">
-				<img src="/images/PBTV.png"><br />
+				<a href="/vod"><img src="/images/PBTV.png"><br /></a>
 			</td></tr>
 			<tr><td class="center">
-				<h1>
-					<a href="#">PlayboyTV LA: VOD Packager</a>
+				<h1 style="color: #eee;">
+					PlayboyTV LA: VOD Packager
 				</h1>
 			</td></tr>
 		</table>
