--- a/Packager/Templates/view_dashboard.html
+++ b/Packager/Templates/view_dashboard.html
@@ -36,7 +36,7 @@
 			<img src="/images/icons/hourglass.png"></td><td class="tdIconographyDesc">Queued
 		</td>
 		<td class="tdIconographyIcon" title="Package ready for download">
-			<img src="/images/icons/package_green.png"></td><td class="tdIconographyDesc">Packaged
+			<img src="/images/icons/tick.png"></td><td class="tdIconographyDesc">Packaged
 		</td>
 		<td class="tdIconographyIcon" title="Error creating package">
 			<img src="/images/icons/exclamation.png"></td><td class="tdIconographyDesc">Error
