--- a/Packager/Templates/view_dashboard.html
+++ b/Packager/Templates/view_dashboard.html
@@ -7,7 +7,13 @@
 <link rel="stylesheet" href="/css/dashboard.css" />
 
 {% for package_group in packages_groups %}
-<span class="dashboardTitle">Package group: {{package_group.name}}</span>
+<span class="dashboardTitle">Package group: 
+	<select id="package_group" class="slctPkgGrp" style="width: auto;">
+		{% for pkgg in packages_group_list %}
+		<option value="{{pkgg.id}}">{{pkgg.name}}</option>
+		{% endfor %}
+	</select>
+</span>
 
 <table class="tblDashboard">
 	<tbody>
@@ -30,6 +36,7 @@
 	</tbody>
 </table>
 {% endfor %}
+
 <!-- VIEW'S ICONOGRAPHY -->
 <table id="tblIconography">
 	<tr>
@@ -70,7 +77,6 @@ $(document).ready(function() {
 					}
 				}
 			});
-			
 		}
 	});
 
