--- a/Packager/Templates/view_package_group.html
+++ b/Packager/Templates/view_package_group.html
@@ -7,7 +7,6 @@
 <link rel="stylesheet" href="/css/dashboard.css" />
 <script type="text/javascript" src="/js/dashboard.js"></script>
 
-{% for package_group in packages_groups %}
 <span class="dashboardTitle">Package group: 
 	<select id="package_group" name="package_group" class="slctPkgGrp" style="width: auto;" onchange="javascript:onChangePackageGroup();">
 		{% for pkgg in packages_group_list %}
@@ -37,13 +36,6 @@
 	</tbody>
 </table>
 
-<!-- HIDDEN FIELDS -->
-<input type="hidden" id="package_group_id" name="package_group_id" value="{{package_group.id}}" />
-<input type="hidden" id="package_group_name" name="package_group_name" value="{{package_group.name}}" />
-<input type="hidden" id="package_group_desc" name="package_group_desc" value="{{package_group.description}}" />
-
-{% endfor %}
-
 <!-- VIEW'S ICONOGRAPHY -->
 <table id="tblIconography">
 	<tr>
@@ -64,16 +56,15 @@
 var json_string = "{\"items\": [{% for item in matriz %}{\"item\":{{item.0.0}}, \"pkgs\":[{% for pkg in item.1 %}{\"pkg_id\":{{pkg.0}}, \"customer_id\":{{pkg.1}}, \"pkg_status\":\"{{pkg.2}}\"},{% endfor %}{\"pkg_id\":0, \"customer_id\":0, \"pkg_status\":\"\"}]},{% endfor %}{\"item\":0, \"pkgs\":[]}]}";
 </script>
 
+<!-- HIDDEN FIELDS -->
+<input type="hidden" id="package_group_id" name="package_group_id" value="{{package_group.id}}" />
+<input type="hidden" id="package_group_name" name="package_group_name" value="{{package_group.name}}" />
+<input type="hidden" id="package_group_desc" name="package_group_desc" value="{{package_group.description}}" />
+
 {% endblock %}
 
 {% block action_bar %}
 
-{% if packages_groups.has_previous %}
-<a href="?page={{ packages_groups.previous_page_number }}" class="bttn prev">Previous</a>
-{% endif %}
-<a href="#" onclick="javascript:actionRefreshView();" class="bttn icon refresh">Refresh<a>
-{% if packages_groups.has_next %}
-<a href="?page={{ packages_groups.next_page_number }}" class="bttn next">Next</a>
-{% endif %}
+<a href="#" onclick="javascript:actionRefreshView();" class="bttn icon refresh">Refresh</a>
 
 {% endblock %}
