--- a/Packager/Templates/base.html
+++ b/Packager/Templates/base.html
@@ -3,7 +3,7 @@
 <head>
 	{% load dajaxice_templatetags %}
 	<meta charset="utf-8" />
-	<title>VOD Claxson</title>
+	<title>PlayboyTV LA: VOD Packager</title>
 	<link rel="stylesheet" href="/css/reset.css" />
 	<link rel="stylesheet" href="/css/text.css" />
 	<link rel="stylesheet" href="/css/960.css" />
