--- a/Packager/Templates/base_views.html
+++ b/Packager/Templates/base_views.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>VOD Claxson</title>
+	<title>PlayboyTV LA: VOD Packager</title>
 	<link rel="stylesheet" href="/css/reset.css" />
 	<link rel="stylesheet" href="/css/text.css" />
 	<link rel="stylesheet" href="/css/960.css" />
